--- a/local.yml
+++ b/local.yml
@@ -18,7 +18,7 @@
     - include: tasks/core-setup.yml
     - include: tasks/node-setup.yml
     - include: tasks/npm-packages.yml
-    # - include: tasks/zsh-setup.yml
+    - include: tasks/zsh-setup.yml
     - include: tasks/productivity-tools.yml
     - include: tasks/nvim-setup.yml
     - include: tasks/lsp.yml
