--- a/local.yml
+++ b/local.yml
@@ -1,4 +1,5 @@
 - hosts: localhost
+  connection: local
   vars:
     source_key: "./.ssh/id_rsa"
     dest_key: "{{ lookup('env', 'HOME') }}/.ssh/id_rsa"
@@ -14,12 +15,12 @@
         - install
         - core
   tasks:
-    - include: tasks/ssh.yml
-    - include: tasks/core-setup.yml
-    - include: tasks/node-setup.yml
-    - include: tasks/npm-packages.yml
-    - include: tasks/zsh-setup.yml
-    - include: tasks/productivity-tools.yml
-    - include: tasks/nvim-setup.yml
-    - include: tasks/lsp.yml
-    - include: tasks/dotfiles.yml
+    - import_tasks: tasks/ssh.yml
+    - import_tasks: tasks/core-setup.yml
+    - import_tasks: tasks/node-setup.yml
+    - import_tasks: tasks/npm-packages.yml
+    - import_tasks: tasks/zsh-setup.yml
+    - import_tasks: tasks/productivity-tools.yml
+    - import_tasks: tasks/nvim-setup.yml
+    - import_tasks: tasks/lsp.yml
+    - import_tasks: tasks/dotfiles.yml
